--- a/cherry/src/app/components/display/display.component.scss
+++ b/cherry/src/app/components/display/display.component.scss
@@ -122,7 +122,7 @@ $inputs-height: 40vh;
 
 .recording {
     position: absolute;
-    bottom: 0;
+    bottom: 1vh;
     left: 1%;
     height: 10%;
     width: $max-width;
