--- a/cherry/src/app/components/management/management.component.scss
+++ b/cherry/src/app/components/management/management.component.scss
@@ -27,7 +27,7 @@
     min-width: 100px;
     z-index: 5000;
 
-    pointer-events: all;    
+    pointer-events: fill;    
 }
 
 ::ng-deep .mat-button-focus-overlay {
